--- a/Submission.Rmd
+++ b/Submission.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Untitled"
-author: "Percy Zhai & Zihao Zheng"
+author: "Percy Zhai & Zach Zheng"
 date: "11/5/2019"
 output: pdf_document
 ---
 
-Function 1 in Python: for and vec
+Function A in Python: for and vec
 ```{python}
 import numpy as np
 import timeit
@@ -116,8 +116,8 @@ for(j in 1:1000){
   timevec[i] <- toc - tic
 }
 
-plot(timefor,col = 2, main = "Function B in R",xlab = "Number of calculations",ylab = "Time taken / s")
-points(timevec, col = 3)
+plot(timefor,col = 2, main = "Function B in R",xlab = "Number of calculations",ylab = "Time taken / s",pch=20)
+points(timevec, col = 3, pch=20)
 legend("topleft",c("For Loop","Vec"), fill = c("red","green"))
 ```
 
