--- a/Problem 1.Rmd
+++ b/Problem 1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "Problem 1"
 author: "Percy Zhai & Zach Zheng"
 date: "11/5/2019"
 output: pdf_document
@@ -50,7 +50,7 @@ for j in range(looprange):
     res1for = Stu1FuncAFor(x)
   toc = timeit.default_timer()
   timefor[j] = toc-tic
-plt.scatter(range(1,looprange+1),timefor, label="ForLoop")
+plt.scatter(range(1,looprange+1),timefor,c="r", label="ForLoop")
 
 timevec = np.zeros(looprange)
 for j in range(looprange):
@@ -59,7 +59,7 @@ for j in range(looprange):
     res1vec = Stu1FuncAVec(x)
   toc = timeit.default_timer()
   timevec[j] = toc-tic
-plt.scatter(range(1,looprange+1),timevec,label="Vector")
+plt.scatter(range(1,looprange+1),timevec,c="g", label="Vector")
 plt.legend()
 plt.xlabel("Number of calculations")
 plt.ylabel("Time taken / s")
@@ -146,9 +146,9 @@ Std2FuncA_vec<-function(X){
   return(R)
 }
 
-timefor=rep(0,100)
-timevec=rep(0,100)
-for(i in 1:100){
+timefor=rep(0,1000)
+timevec=rep(0,1000)
+for(i in 1:1000){
   tic1=Sys.time()
   for(j in 1:i){
     a = Std2FuncA_for(X)
@@ -156,7 +156,7 @@ for(i in 1:100){
   timefor[i] = Sys.time()-tic1
 }
 
-for(i in 1:100){
+for(i in 1:1000){
   tic2=Sys.time()
   for (j in 1:i){
     b = Std2FuncA_vec(X)
@@ -204,15 +204,14 @@ for i in range(1000):
   for j in range(i):
     a = Std2FuncB_for(X);
   timefor[i] = timeit.default_timer()-tic;
-plt.scatter(range(1000),timefor,label="ForLoop")
-
+plt.scatter(range(1000),timefor,c="r",label="ForLoop")
 
 for i in range(1000):
   tic=timeit.default_timer();
   for j in range(i):
     b = Std2FuncB_vec(X);
   timevec[i] = timeit.default_timer()-tic;
-plt.scatter(range(1000),timevec,label="Vector")
+plt.scatter(range(1000),timevec,c="g",label="Vector")
 plt.legend()
 plt.xlabel("Number of calculations")
 plt.ylabel("Time taken / s")
